# cuEXPM

./: CMakeLists.txt
src/: CMakeLists.txt  expm.cu  expm.cuh  main.cu
